<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/plantillageneral"
    android:paddingTop="170dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">




    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/Name"
        android:hint="@string/nombre"
        android:textColorHint="@color/material_blue_grey_800"
        android:layout_marginBottom="5dp"
        android:background="#ffffffff"
        android:layout_weight="0.0009"
        android:textColor="#000000"/>
    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/LastName"
        android:hint="@string/apellido"
        android:textColorHint="@color/material_blue_grey_800"
        android:background="#ffffffff"
        android:layout_weight="0.0009"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#000000"/>
    <EditText
        android:inputType="textEmailAddress"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/Email"
        android:hint="@string/email"
        android:textColorHint="@color/material_blue_grey_800"
        android:background="#ffffffff"
        android:layout_weight="0.0009"
        android:layout_marginBottom="5dp"
        android:textColor="#000000"/>
    <EditText
        android:inputType="textPassword"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/Rpassword"
        android:hint="@string/password"
        android:textColorHint="@color/material_blue_grey_800"
        android:background="#ffffff"
        android:layout_weight="0.0009"
        android:layout_marginBottom="5dp"
        android:textColor="#000000"/>
    <EditText
        android:inputType="textPassword"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/ConfirmRpassword"
        android:hint="@string/confirmPass"
        android:textColorHint="@color/material_blue_grey_800"
        android:background="#ffffff"
        android:layout_weight="0.0009"
        android:textColor="#000000"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/paises"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:textColor="@color/material_blue_grey_800"/>

        <Spinner
            android:id="@+id/ciudades"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="Ciudad"
            android:textColor="@color/material_blue_grey_800"/>
    </LinearLayout>
    <Spinner
        android:id="@+id/gender"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:entries="@array/gender_arrays"
        android:textColor="@color/material_blue_grey_800"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/terminos_condiciones"
            android:checked="false" />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etTerminos"
            android:layout_marginTop="2dp"
            android:hint="@string/terminos"
            android:textSize="20sp"
            android:textColor="#0D47A1"
            style="@style/Mystyle"
            android:textIsSelectable="false"
            android:textColorHint="#0D47A1" />
    </LinearLayout>


    <Button
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:text="@string/Registrate"
        android:id="@+id/registrate"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#ffa7123f"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp" />

</LinearLayout>
